Got a server running

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,1 +1,17 @@
-test home.hbs
+<table>
+	{{#each days}}
+		<tr>
+			<td>{{day}}</td>
+		</tr>
+		<tr>
+			{{#each keys}}
+				<td>{{this}}</td>
+			{{/each}}
+		</tr>
+		<tr>
+			{{#each values}}
+				<td>{{this}}</td>
+			{{/each}}
+		</tr>
+	{{/each}}
+</table>
