--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,3 +1,8 @@
+<script type="text/javascript">
+	console.log('days', {{{daysJson}}});
+	console.log('months', {{{monthsJson}}});
+</script>
+
 {{#each months}}
 
 	<h1>{{momentFormat this.date "MMM"}}</h1>
@@ -5,17 +10,31 @@
 	<table>
 		<tr>
 			<th>&nbsp;</th>
-			{{#each ../fields}}
-				<th>{{this}}</th>
-			{{/each}}
+			<th>Low</th>
+			<th>High</th>
+			<th>Rain Probability</th>
+			<th>Rain Intensity</th>
+			<th>Rain Intensity Max</th>
+			<th>Humidity</th>
+			<th>Clouds</th>
+			<th>Dew</th>
+			<th>Pressure</th>
+			<th>Ozone</th>
 		</tr>
 
 		{{#each this.days}}
 			<tr>
 				<td>{{momentFormat this.dateMoment "Do"}}</td>
-				{{#each this.values}}
-					<td>{{this}}</td>
-				{{/each}}
+				<td>{{this.data.apparentTemperatureLow}}</td>
+				<td>{{this.data.apparentTemperatureHigh}}</td>
+				<td>{{this.data.precipProbability}}</td>
+				<td>{{this.data.precipIntensity}}</td>
+				<td>{{this.data.precipIntensityMax}}</td>
+				<td>{{this.data.humidity}}</td>
+				<td>{{this.data.cloudCover}}</td>
+				<td>{{this.data.dewPoint}}</td>
+				<td>{{this.data.pressure}}</td>
+				<td>{{this.data.ozone}}</td>
 			</tr>
 		{{/each}}
 
